[tool.poetry]
name = "flask-to-fastapi"
version = "0.1.0"
description = ""
authors = ["osangu <osangu012@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_to_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
